# macrotool

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  MacroTool_Current_Capabilities.docx  README.md  SCORING_BUILD_PLAN.md  SCORING_EXPLAINER.md  demo.py  plan.md  project_spec.md  pyproject.toml  requirements.txt  structure_evals.md  structure_profiles.csv
analytics/: distributions.py  market_state.py  models.py  scenario_generator.py  scenario_pricer.py  strike_resolver.py  structure_pricer.py  vol_surface.py
config/: loader.py  override_detector.py  resolver.py  schema.py  user_profile.json
conversation/: client.py  context_builder.py  flow.py  tracing.py
conversation/modes/: critique.py  recommend.py
conversation/prompts/: critique.txt  entry_exit.txt  sizing.txt  structure_rec.txt  system_base.txt  (+2 more)
data/: market_snapshot.json  schema.py  snapshot_loader.py
interface/: app.py  charts.py  context_rules.py  debug_log.py  decision_parameters.py  session.py  supabase_logger.py  testing_brief.json
knowledge_engine/: conventions.py  critique_engine.py  loader.py  models.py  scenario_scorer.py  scenario_weighter.py  sizing_engine.py  structure_scorer.py  structure_selector.py
pricing/: black_scholes.py  digital.py  digital_rko.py  forwards.py  rko.py  scenario.py  spreads.py
tests/: test_analytics.py  test_context_rules_helpers.py  test_foundation.py  test_knowledge.py  test_market_state.py  test_pricing.py  test_scenario_generator.py  test_scenario_pricer.py  test_scenario_scorer.py  test_scenario_weighter.py  test_structure_scorer.py  test_vol_surface.py
(+23 files in other folders)
