[project]
name = "macrotool"
version = "0.1.1"
description = "EM FX Trade Structuring & Sizing Tool"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.6.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "rich>=13.7.0",
    "streamlit>=1.32.0",
    "plotly>=5.20.0",
]

[project.scripts]
macrotool = "interface.app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
